added libraries (choices.js for custom selects and swiper for sliders), images, icons and other for header and 'special' section. collapse the header-top block. selects and sliders is configured (js)

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
   <body>
     @include('pages/header.html')
 
-    <main>@include('pages/special.html') @include('pages/rating.html')</main>
+    <main>
+      @include('pages/special.html') @include('pages/rating.html') @include('pages/banner.html')
+      @include('pages/top-categories.html')
+    </main>
 
     @include('pages/footer.html')
   </body>
