--- a/src/pages/special.html
+++ b/src/pages/special.html
@@ -1,16 +1,195 @@
 <section class="special">
-  <div class="container">
+  <div class="container special__container">
     <h2 class="title-h2 special__title">Специальные предложения</h2>
-    <div class="swiper">
+    <div class="swiper special__slider">
       <div class="swiper-wrapper">
-        <!-- Slides -->
-        <div class="swiper-slide">Slide 1</div>
-        <div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide">Slide 3</div>
+        <!-- slide 1 (small block) -->
+        <div class="swiper-slide swiper-slide--small">
+          <div class="special__dicsount">
+            <span class="special__discount-price">-&nbsp;9&nbsp;000</span>
+            <svg width="92" height="34" class="special__icon">
+              <use xlink:href="images/sprite.svg#special_discount"></use>
+            </svg>
+          </div>
+          <picture>
+            <source srcset="images/special_1.webp" type="image/webp" />
+            <img
+              loading="lazy"
+              src="images/special_1.png"
+              alt="Кресло велюровое &laquo;X-24&raquo;"
+              class="image special__img"
+            />
+          </picture>
+          <span class="special__product-title product-title"
+            >Кресло велюровое &laquo;X-24&raquo;</span
+          >
+          <div class="special__price-block">
+            <span class="special__price-actual">15&nbsp;990 руб</span>
+            <span class="special__price-discount">24&nbsp;990 руб</span>
+          </div>
+          <button class="btn-reset btn special__btn">Купить</button>
+        </div>
+        <!-- slide 2 (big block) -->
+        <div class="swiper-slide swiper-slide--big">
+          <div class="special__dicsount">
+            <span class="special__discount-price">-&nbsp;10&nbsp;000</span>
+            <svg width="92" height="34" class="special__icon">
+              <use xlink:href="images/sprite.svg#special_discount"></use>
+            </svg>
+          </div>
+          <picture>
+            <source srcset="images/special_2.webp" type="image/webp" />
+            <img
+              loading="lazy"
+              src="images/special_2.png"
+              alt="Диван тканевый &laquo;Z-44&raquo;"
+              class="image special__img"
+            />
+          </picture>
+
+          <div class="special__info-block">
+            <div class="special__info">
+              <span class="special__product-title product-title"
+                >Диван тканевый &laquo;Z-44&raquo;</span
+              >
+              <div class="special__price-block">
+                <span class="special__price-actual">22&nbsp;990 руб</span>
+                <span class="special__price-discount">32&nbsp;900 руб</span>
+              </div>
+              <button class="btn-reset btn special__btn">Купить</button>
+            </div>
+            <picture>
+              <source srcset="images/special_plan_1.webp" type="image/webp" />
+              <img
+                loading="lazy"
+                src="images/special_plan_1.png"
+                alt='Схема дивана "вел-флок Z-85"'
+                class="image special__img special__plan-img"
+              />
+            </picture>
+          </div>
+        </div>
+        <!-- slide 3 (small block) -->
+        <div class="swiper-slide swiper-slide--small">
+          <div class="special__dicsount">
+            <span class="special__discount-price">-&nbsp;600</span>
+            <svg width="92" height="34" class="special__icon">
+              <use xlink:href="images/sprite.svg#special_discount"></use>
+            </svg>
+          </div>
+          <picture>
+            <source srcset="images/special_3.webp" type="image/webp" />
+            <img
+              loading="lazy"
+              src="images/special_3.png"
+              alt="Будильник &laquo;Quartz-23&raquo;"
+              class="image special__img"
+            />
+          </picture>
+          <span class="special__product-title product-title"
+            >Будильник &laquo;Quartz-23&raquo;</span
+          >
+          <div class="special__price-block">
+            <span class="special__price-actual">1&nbsp;290 руб</span>
+            <span class="special__price-discount">1&nbsp;890 руб</span>
+          </div>
+          <button class="btn-reset btn special__btn">Купить</button>
+        </div>
+        <!-- slide 4 (small block) -->
+        <div class="swiper-slide swiper-slide--small">
+          <div class="special__dicsount">
+            <span class="special__discount-price">&-&nbsp;300</span>
+            <svg width="92" height="34" class="special__icon">
+              <use xlink:href="images/sprite.svg#special_discount"></use>
+            </svg>
+          </div>
+          <picture>
+            <source srcset="images/special_4.webp" type="image/webp" />
+            <img
+              loading="lazy"
+              src="images/special_4.png"
+              alt="Мини-скульптура &laquo;Oh&nbsp;my&nbsp;deer&raquo;"
+              class="image special__img"
+            />
+          </picture>
+          <span class="special__product-title product-title"
+            >Мини-скульптура &laquo;Oh&nbsp;my&nbsp;deer&raquo;</span
+          >
+          <div class="special__price-block">
+            <span class="special__price-actual">690 руб</span>
+            <span class="special__price-discount">990 руб</span>
+          </div>
+          <button class="btn-reset btn special__btn">Купить</button>
+        </div>
+        <!-- slide 5 (big block) -->
+        <div class="swiper-slide swiper-slide--big">
+          <div class="special__dicsount">
+            <span class="special__discount-price">-&nbsp;10&nbsp;000</span>
+            <svg width="92" height="34" class="special__icon">
+              <use xlink:href="images/sprite.svg#special_discount"></use>
+            </svg>
+          </div>
+          <picture>
+            <source srcset="images/special_5.webp" type="image/webp" />
+            <img
+              loading="lazy"
+              src="images/special_5.png"
+              alt="Диван вел-флок &laquo;Z-85&raquo;"
+              class="image special__img"
+            />
+          </picture>
+          <div class="special__info-block">
+            <div class="special__info">
+              <span class="special__product-title product-title"
+                >Диван вел-флок &laquo;Z-85&raquo;</span
+              >
+              <div class="special__price-block">
+                <span class="special__price-actual">22&nbsp;990 руб</span>
+                <span class="special__price-discount">32&nbsp;900 руб</span>
+              </div>
+              <button class="btn-reset btn special__btn">Купить</button>
+            </div>
+            <picture>
+              <source srcset="images/special_plan_2.webp" type="image/webp" />
+              <img
+                loading="lazy"
+                src="images/special_plan_2.png"
+                alt='Схема дивана "вел-флок Z-85"'
+                class="image special__img special__plan-img"
+              />
+            </picture>
+          </div>
+        </div>
+        <!-- slide 6 (small block) -->
+        <div class="swiper-slide swiper-slide--small">
+          <div class="special__dicsount">
+            <span class="special__discount-price">-&nbsp;700</span>
+            <svg width="92" height="34" class="special__icon">
+              <use xlink:href="images/sprite.svg#special_discount"></use>
+            </svg>
+          </div>
+          <picture>
+            <source srcset="images/special_6.webp" type="image/webp" />
+            <img
+              loading="lazy"
+              src="images/special_6.png"
+              alt="Термометр + гидрометр &laquo;H-18&raquo;"
+              class="image special__img"
+            />
+          </picture>
+          <span class="special__product-title product-title"
+            >Термометр + гидрометр &laquo;H-18&raquo;</span
+          >
+          <div class="special__price-block">
+            <span class="special__price-actual">1&nbsp;390 руб</span>
+            <span class="special__price-discount">2&nbsp;090 руб</span>
+          </div>
+          <button class="btn-reset btn special__btn">Купить</button>
+        </div>
       </div>
-      <!-- navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
     </div>
+    <!-- navigation buttons -->
+    <div class="button-prev"></div>
+    <div class="button-next"></div>
   </div>
 </section>
