--- a/src/pages/banner.html
+++ b/src/pages/banner.html
@@ -1,8 +1,9 @@
-<section class="banner">
+<section class="banner section-offset">
   <div class="container">
-    <h2 class="title-h2 banner__title">
-      <span class="banner__name">Оксфорд 1950</span>Новая коллекция изысканных кресел
-    </h2>
-    <button class="btn-reset bunner__btn">Ознакомиться</button>
+    <h3 class="banner__text-block">
+      <span class="banner__title">Оксфорд 1950</span>
+      <span class="banner__subtitle">Новая коллекция изысканных кресел</span>
+    </h3>
+    <button class="btn-reset btn-revert banner__btn">Ознакомиться</button>
   </div>
 </section>
