--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -1,1 +1,80 @@
-<footer>footer</footer>
+<footer class="footer">
+  <div class="footer__content">
+    <div class="container grid">
+      <div class="footer__left">
+        <div class="logo footer__logo">
+          <svg width="37px" height="27px" class="logo__elephant">
+            <use xlink:href="images/sprite.svg#logo-elephant"></use>
+          </svg>
+          <svg width="140px" height="27px" class="logo__text">
+            <use xlink:href="images/sprite.svg#logo-text"></use>
+          </svg>
+        </div>
+        <div class="footer__socials">
+          <a href="#" target="_blank" class="footer__social-link">
+            <svg width="30px" height="30px" class="footer__social footer__facebook">
+              <use xlink:href="images/sprite.svg#facebook"></use>
+            </svg>
+          </a>
+          <a href="#" target="_blank" class="footer__social-link">
+            <svg width="30px" height="30px" class="footer__social footer__vk">
+              <use xlink:href="images/sprite.svg#vk"></use>
+            </svg>
+          </a>
+          <a href="#" target="_blank" class="footer__social-link">
+            <svg width="30px" height="30px" class="footer__social footer__instagram">
+              <use xlink:href="images/sprite.svg#instagram"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="footer__right">
+        <ul class="footer__list">
+          <h4 class="footer__title">О&nbsp;нас</h4>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">О&nbsp;компании</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">Блог</a>
+          </li>
+        </ul>
+        <ul class="footer__list">
+          <h4 class="footer__title">Услуги</h4>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">Доставка</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">Рассрочка и&nbsp;кредит</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">Сборка и&nbsp;установка</a>
+          </li>
+        </ul>
+        <ul class="footer__list">
+          <h4 class="footer__title">Связь с&nbsp;нами</h4>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">Обратная связь</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">Контакты</a>
+          </li>
+        </ul>
+        <ul class="footer__list">
+          <h4 class="footer__title">Сотрудничество</h4>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">Поставщикам</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">Оптовикам</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" target="_blank" class="footer__link">Карьера</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer__copy-block">
+    <span class="footer__copy">SDP&reg; 2011-2021</span>
+  </div>
+</footer>
