--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -37,11 +37,11 @@
 
   <div class="header__bottom">
     <div class="container grid">
-      <div class="header__logo">
-        <svg width="37px" height="27px" class="header__logo-elephant">
+      <div class="logo header__logo">
+        <svg width="37px" height="27px" class="logo__elephant header__logo-elephant">
           <use xlink:href="images/sprite.svg#logo-elephant"></use>
         </svg>
-        <svg width="140px" height="27px" class="header__logo-text">
+        <svg width="140px" height="27px" class="logo__text header__logo-text">
           <use xlink:href="images/sprite.svg#logo-text"></use>
         </svg>
       </div>
