--- a/src/pages/special.html
+++ b/src/pages/special.html
@@ -1,4 +1,4 @@
-<section class="special">
+<section class="special section-offset">
   <div class="container special__container">
     <h2 class="title-h2 special__title">Специальные предложения</h2>
     <div class="swiper special__slider">
