--- a/src/pages/top-categories.html
+++ b/src/pages/top-categories.html
@@ -1,9 +1,9 @@
-<section class="top-categories">
+<section class="top-categories section-offset">
   <div class="container">
-    <h2 class="h2-title top-categories__title">Топ категории</h2>
+    <h2 class="title-h2 top-categories__title">Топ категории</h2>
     <div class="grid top-categories__grid">
-      <div class="category category--big">
-        <div class="category__list-of-type">
+      <div class="category category-big">
+        <div class="category__list-of-types">
           <span class="category__tipe">Прямые</span>
           <span class="category__tipe">Угловые</span>
           <span class="category__tipe">Модульные</span>
@@ -14,16 +14,21 @@
           <img
             loading="lazy"
             src="images/category_1.png"
-            class="image"
+            class="category__img"
             width="300"
             height="300"
             alt="Прямой, угловой и&nbsp;модульный диван"
           />
         </picture>
-        <button class="btn-reset category__btn">В каталог</button>
+        <button class="btn-reset btn category__btn">
+          В каталог
+          <svg width="22px" height="22px" class="category__arrow">
+            <use xlink:href="images/sprite.svg#category-arrow"></use>
+          </svg>
+        </button>
       </div>
-      <div class="category category--big">
-        <div class="category__list-of-type">
+      <div class="category category-big">
+        <div class="category__list-of-types">
           <span class="category__tipe">Мягкие</span>
           <span class="category__tipe">Кресла-кровати</span>
         </div>
@@ -33,16 +38,21 @@
           <img
             loading="lazy"
             src="images/category_2.png"
-            class="image"
+            class="category__img"
             width="300"
             height="300"
             alt="Мягкие кресла-кровати"
           />
         </picture>
-        <button class="btn-reset category__btn">В каталог</button>
+        <button class="btn-reset btn category__btn">
+          В каталог
+          <svg width="22px" height="22px" class="category__arrow">
+            <use xlink:href="images/sprite.svg#category-arrow"></use>
+          </svg>
+        </button>
       </div>
-      <div class="category category--small">
-        <div class="category__list-of-type">
+      <div class="category category-small">
+        <div class="category__list-of-types">
           <span class="category__tipe">Односпальные</span>
           <span class="category__tipe">Двуспальные</span>
         </div>
@@ -52,16 +62,21 @@
           <img
             loading="lazy"
             src="images/category_3.png"
-            class="image"
+            class="category__img"
             width="300"
             height="300"
             alt="Односпальные и&nbsp;двуспальные кровати"
           />
         </picture>
-        <button class="btn-reset category__btn">В каталог</button>
+        <button class="btn-reset btn category__btn">
+          В каталог
+          <svg width="22px" height="22px" class="category__arrow">
+            <use xlink:href="images/sprite.svg#category-arrow"></use>
+          </svg>
+        </button>
       </div>
-      <div class="category category--small">
-        <div class="category__list-of-type">
+      <div class="category category-small">
+        <div class="category__list-of-types">
           <span class="category__tipe">Тумбы</span>
           <span class="category__tipe">Комоды</span>
         </div>
@@ -71,16 +86,21 @@
           <img
             loading="lazy"
             src="images/category_4.png"
-            class="image"
+            class="category__img"
             width="300"
             height="300"
             alt="Тумбы и&nbsp;комоды"
           />
         </picture>
-        <button class="btn-reset category__btn">В каталог</button>
+        <button class="btn-reset btn category__btn">
+          В каталог
+          <svg width="22px" height="22px" class="category__arrow">
+            <use xlink:href="images/sprite.svg#category-arrow"></use>
+          </svg>
+        </button>
       </div>
-      <div class="category category--small">
-        <div class="category__list-of-type">
+      <div class="category category-small">
+        <div class="category__list-of-types">
           <span class="category__tipe">Деревянные</span>
           <span class="category__tipe">Металлокаркас</span>
         </div>
@@ -90,13 +110,18 @@
           <img
             loading="lazy"
             src="images/category_5.png"
-            class="image"
+            class="category__img"
             width="300"
             height="300"
             alt="Деревянные или металлокаркасные стулья"
           />
         </picture>
-        <button class="btn-reset category__btn">В каталог</button>
+        <button class="btn-reset btn category__btn">
+          В каталог
+          <svg width="22px" height="22px" class="category__arrow">
+            <use xlink:href="images/sprite.svg#category-arrow"></use>
+          </svg>
+        </button>
       </div>
     </div>
   </div>
